# aoc

./: .gitignore  Cargo.toml  README.md
2015/01/aoc-2015-01-part1/: Cargo.toml  README.md
2015/01/aoc-2015-01-part2/: Cargo.toml  README.md
2015/01/part1/: README.md
2015/01/part2/: README.md
2015/02/aoc-2015-02-part1/: Cargo.toml  README.md
2015/02/aoc-2015-02-part2/: Cargo.toml  README.md
2015/03/aoc-2015-03-part1/: Cargo.toml  README.md
2015/03/aoc-2015-03-part2/: Cargo.toml  README.md
2015/04/aoc-2015-04-part1/: Cargo.toml  README.md
2015/04/aoc-2015-04-part2/: Cargo.toml  README.md
2015/04/part1/: Cargo.toml
2015/05/: example-input.txt
2015/05/aoc-2015-05-part1/: Cargo.toml  README.md
2015/05/aoc-2015-05-part2/: Cargo.toml  README.md
2015/06/: example-input.txt
2015/06/aoc-2015-06-part1/: Cargo.toml  README.md
2015/06/aoc-2015-06-part2/: Cargo.toml  README.md
2015/06/part1/: Cargo.toml
2015/06/part2/: Cargo.toml
2015/07/: example-input.txt
2015/07/aoc-2015-07-part1/: Cargo.toml  README.md
2015/07/aoc-2015-07-part2/: Cargo.toml  README.md
2015/07/part1/: \
2015/08/aoc-2015-08-part1/: Cargo.toml  README.md
2015/08/aoc-2015-08-part2/: Cargo.toml  README.md
2015/09/aoc-2015-09-part1/: Cargo.toml  README.md
2015/09/aoc-2015-09-part2/: Cargo.toml  README.md
2015/09/part1/: Cargo.toml
2015/09/part2/: Cargo.toml
2015/10/aoc-2015-10-part1-2/: Cargo.toml  README.md
2015/11/: example-input2.txt
2015/11/aoc-2015-11-part1-2/: Cargo.toml  README.md
2015/12/: example-input.txt
2015/13/part1/: \  (+1 more)
shared/src/: lib.rs
(+113 files in other folders)
