[workspace]

resolver = "3"

members = ["2015/01/aoc-2015-01-part1", "shared", "2015/01/aoc-2015-01-part2", "2015/02/aoc-2015-02-part1", "2015/02/aoc-2015-02-part2", "2015/03/aoc-2015-03-part1", "2015/03/aoc-2015-03-part2", "2015/04/aoc-2015-04-part1", "2015/04/aoc-2015-04-part2", "2015/05/aoc-2015-05-part1", "2015/05/aoc-2015-05-part2", "2015/06/aoc-2015-06-part1", "2015/06/aoc-2015-06-part2", "2015/07/aoc-2015-07-part1", "2015/07/aoc-2015-07-part2", "2015/08/aoc-2015-08-part1", "2015/08/aoc-2015-08-part2", "2015/09/aoc-2015-09-part1", "2015/09/aoc-2015-09-part2", "2015/10/aoc-2015-10-part1-2", "2015/11/aoc-2015-11-part1-2", "2015/12/aoc-2015-part1", "2015/12/aoc-2015-part2", "2015/13/aoc-2015-13-part1", "2015/13/aoc-2015-13-part2", "2015/14/aoc-2015-14-part1", "2015/14/aoc-2015-14-part2", "2015/15/aoc-2015-15-part1", "2015/15/aoc-2015-15-part2"]
